--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http_mock_adapter: ^0.6.1
   image_picker: ^1.1.2
   insta_image_viewer: ^1.0.4
+  intl: ^0.20.2
   logger: ^2.5.0
   mime: ^2.0.0
   mockito: ^5.4.5
