--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ dependencies:
   rename_app: ^1.6.2
   share_plus: ^10.1.4
   shared_preferences: ^2.5.2
+  socket_io_client: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  test: ^1.24.0
 
 flutter:
   uses-material-design: true
