--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,18 @@ dependencies:
   share_plus: ^10.1.4
   shared_preferences: ^2.5.2
   socket_io_client: ^3.1.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   test: ^1.24.0
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+  
 flutter:
   uses-material-design: true
   assets:
