--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.17
   fluttertoast: ^8.2.12
+  gap: ^3.0.1
   go_router: ^14.8.1
   http: ^1.3.0
   http_mock_adapter: ^0.6.1
